--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mage-ui",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn storybook\"",
     "build": "yarn storybook:build && next build",
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@rehype-pretty/transformers": "^0.13.2",
+    "@tabler/icons-react": "^3.31.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "chalk": "^5.3.0",
@@ -40,7 +41,7 @@
     "commander": "^12.1.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^12.5.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.startcase": "^4.4.0",
